--- a/ansible_script.yaml
+++ b/ansible_script.yaml
@@ -1,16 +1,13 @@
 - name: Deploy dropwizard loan-application backend applicaiton
   hosts: all
-  become: ​yes
-  become_user: root
 
   tasks:
     - name: Creates /mnt/loan-application
       file:
         path: /mnt/loan-application
         state: directory
-      become: yes
 
     - name: ​Copy​ ​jar file ​to​ ​/mnt/loan-application
       copy:
-        src: /target/esp-project-1.0-SNAPSHOT.jar
+        src: ​/target/esp-project-1.0-SNAPSHOT.jar
         dest: ​/mnt/loan-application
