--- a/ansible_script.yaml
+++ b/ansible_script.yaml
@@ -9,5 +9,5 @@
 
     - name: ​Copy​ ​jar file ​to​ ​/mnt/loan-application
       copy:
-        src: ​/target/esp-project-1.0-SNAPSHOT.jar
+        src: ​target/esp-project-1.0-SNAPSHOT.jar
         dest: ​/mnt/loan-application
